# minipak

./: .gdb_history  .gitignore  Cargo.toml  rust-toolchain.toml  unrelocated
crates/encore/: Cargo.toml
crates/encore/src/: env.rs  error.rs  fs.rs  items.rs  lib.rs  memmap.rs  prelude.rs  syscall.rs  utils.rs
crates/minipak/: Cargo.toml  build.rs
crates/minipak/src/: cli.rs  error.rs  main.rs
crates/pixie/: Cargo.toml
crates/pixie/src/: launch.rs  lib.rs  manifest.rs  writer.rs
crates/pixie/src/format/: dynamic.rs  header.rs  mod.rs  prelude.rs  program_header.rs  rela.rs  sym.rs
crates/stage1/: Cargo.toml  build.rs
crates/stage1/src/: lib.rs  main.rs
crates/stage2/: Cargo.toml
crates/stage2/src/: lib.rs
encore/: Cargo.toml
encore/src/: items.rs  lib.rs
samples/: .gitignore  Justfile  hello-pie  hello-pie.c
