[package]
name = "minipak"
version = "0.1.0"
edition = "2024"

[dependencies]
pixie = { path = "../pixie" }
encore = { path = "../encore" }
compiler_builtins = { version = "0.1.144", features = ["mem"] }
lz4_flex = { version = "0.11.3", default-features = false, features = [
  "safe-encode",
  "safe-decode",
] }
displaydoc = { version = "0.2.5", default-features = false }
