[package]
name = "pixie"
version = "0.1.0"
edition = "2024"

[dependencies]
encore = { path = "../encore" }
deku = { version = "0.18.1", default-features = false, features = [
  "alloc",
  "bits",
] }
displaydoc = { version = "0.2.5", default-features = false }
custom_debug = { version = "0.6.2", default-features = false }
