[package]
name = "stage2"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
lz4_flex = { version = "0.11.3", default-features = false, features = [
  "safe-encode",
  "safe-decode",
] }
compiler_builtins = { version = "0.1.144", features = ["mem"] }
encore = { path = "../encore" }
pixie = { path = "../pixie" }
